test/language/errors/errors_functions.hm
# undefined global 'foo'

use "errors"

{ func foo() { return 8 } }

try { foo() } except e { echo runtime(e) }
